// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PreviewButton /> Should render and match the snapshot 1`] = `
.c2 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  font-weight: bold;
  background-color: #FFFFFF;
  color: #B727EA;
  border: 1px solid #B727EA;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-right: 5px;
  margin-left: 5px;
  border-radius: 5px;
  height: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 11px;
  padding-left: 11px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: inline;
}

@media only screen and (max-width:1500px) {
  .c1 {
    width: 50px;
  }
}

@media only screen and (max-width:1500px) {
  .c3 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <button
    class="c2"
    color="secondary"
    display="flex"
    height="35"
    radius="100px"
  >
    <img
      alt="eye"
      src="IMAGE_MOCK"
    />
    <p
      class="c3 preview-text"
    />
  </button>
</div>
`;

exports[`<PreviewButton /> Should render and match the snapshot of disabled button 1`] = `
.c2 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #FFFFFF;
  color: #B727EA;
  border: 1px solid #B727EA;
  cursor: default;
  color: #9AA1B6;
  border-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  margin-right: 5px;
  margin-left: 5px;
  border-radius: 5px;
  height: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 11px;
  padding-left: 11px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: inline;
}

@media only screen and (max-width:1500px) {
  .c1 {
    width: 50px;
  }
}

@media only screen and (max-width:1500px) {
  .c3 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <button
    class="c2"
    color="secondary"
    disabled=""
    display="flex"
    height="35"
    radius="100px"
  >
    <img
      alt="eye"
      src="IMAGE_MOCK"
    />
    <p
      class="c3 preview-text"
    />
  </button>
</div>
`;
